2010-06-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLargeClassesRule.cs: Be more accurate when reporting. E.g.
	report all common prefixes with a count

2010-06-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsRule.cs: Move HasConstructor check before
	a call. Rename two methods (Smaller->Smallest)
	* CodeDuplicatedLocator.cs: Don't create more than one empty List
	of patterns and avoid some allocations. Saves 74kb on self-test
	* Pattern.cs: Reuse the instructions array when possible. Saves 
	1320kb while executing self-test

2010-06-09  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeDuplicatedLocator.cs: Ignore duplicated code located inside
	generated code.
	* InstructionMatcher.cs: Refactor AreEquivalent. Parameters and
	variables do not need to the "at the same index" to be a match.
	Matching now also include STLOC* (not just LDLOC*)
	* Pattern.cs: Rework ComputePrefixes to set/reset Target on
	InstructionMatcher since this could lead to looking at instruction
	from another method (than Target) leading to exceptions or false
	positives

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCodeDuplicatedInSiblingClassesRule.cs:
	* AvoidLargeClassesRule.cs:
	* AvoidLongParameterListsRule.cs:
	* CodeDuplicatedLocator.cs:
 		Apply AvoidUnnecessarySpecializationRule
	* Pattern.cs:
		Apply ConsiderConvertingMethodToPropertyRule

2010-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLongParameterListsRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule on the use of TypeDefinition.Constructors property
	* InstructionMatcher.cs: Fix when "ldarg 0" is used instead of 
	the, much more common, "ldarg_0"

2010-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* InstructionMatcher.cs: Rework AreEquivalent to avoid memory
	allocations when comparing operands (like MethodReferences).
	This makes the rules using the matcher 2 times faster.

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>
